--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "start": "webpack-dev-server --mode development",
+    "build": "webpack --mode production"
+  },
   "devDependencies": {
     "autoprefixer": "^8.2.0",
     "babel": "^6.23.0",
@@ -11,6 +15,7 @@
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.1.0",
+    "import-glob-loader": "^1.1.0",
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.1.3",
     "postcss-scss": "^1.0.4",
@@ -18,6 +23,7 @@
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "webpack": "^4.2.0",
-    "webpack-cli": "^2.0.13"
+    "webpack-cli": "^2.0.13",
+    "webpack-dev-server": "^3.1.1"
   }
 }
